--- a/index.html
+++ b/index.html
@@ -33,50 +33,58 @@
 </div>
 
 <div class="grid  effect-8" id="#grid">
-    <div class="grid-sizer"><a class="fancybox" rel="group" href="creations/850_quill/1.png"><img  src="creations/467_quill/1.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/1.png"><img class="" src="creations/467_quill/1.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/2.png"><img src="creations/467_quill/2.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/3.png"><img src="creations/467_quill/3.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/4.png"><img src="creations/467_quill/4.png"></a></div>
-    <div class="grid-item "><a class="fancybox" rel="group" href="creations/850_quill/30.png"><img src="creations/467_quill/30.png"></a></div>
+    <div class="grid-sizer"><a class="fancybox" rel="group" href="creations/850_quill/1.png"><img  src="creations/467_quill/1.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/1.png"><img class="" src="creations/467_quill/1.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/2.png"><img src="creations/467_quill/2.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/3.png"><img src="creations/467_quill/3.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/4.png"><img src="creations/467_quill/4.jpg"></a></div>
+    <div class="grid-item "><a class="fancybox" rel="group" href="creations/850_quill/30.png"><img src="creations/467_quill/30.jpg"></a></div>
 
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/6.png"><img src="creations/467_quill/6.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/7.png"><img src="creations/467_quill/7.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/8.png"><img src="creations/467_quill/8.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/12.png"><img src="creations/467_quill/12.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/10.png"><img width="934" src="creations/467_quill/10.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/11.png"><img src="creations/467_quill/11.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/14.png"><img src="creations/467_quill/14.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/25.png"><img src="creations/467_quill/25.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/15.png"><img src="creations/467_quill/15.png"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/6.png"><img src="creations/467_quill/6.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/7.png"><img src="creations/467_quill/7.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/8.png"><img src="creations/467_quill/8.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/12.png"><img src="creations/467_quill/12.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/10.png"><img width="934" src="creations/467_quill/10.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/11.png"><img src="creations/467_quill/11.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/14.png"><img src="creations/467_quill/14.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/25.png"><img src="creations/467_quill/25.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/15.png"><img src="creations/467_quill/15.jpg"></a></div>
 
-    <div class="grid-item width2"><a class="fancybox" rel="group" href="creations/850_quill/32.png"><img src="creations/467_quill/32.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/9.png"><img src="creations/467_quill/9.png"></a></div>
+    <div class="grid-item width2"><a class="fancybox" rel="group" href="creations/850_quill/32.png"><img src="creations/467_quill/32.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/9.png"><img src="creations/467_quill/9.jpg"></a></div>
 
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/16.png"><img src="creations/467_quill/16.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/13.png"><img src="creations/467_quill/13.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/18.png"><img src="creations/467_quill/18.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/19.png"><img src="creations/467_quill/19.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/27.png"><img src="creations/467_quill/27.png"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/16.png"><img src="creations/467_quill/16.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/13.png"><img src="creations/467_quill/13.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/18.png"><img src="creations/467_quill/18.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/19.png"><img src="creations/467_quill/19.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/27.png"><img src="creations/467_quill/27.jpg"></a></div>
 
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/17.png"><img src="creations/467_quill/17.png"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/17.png"><img src="creations/467_quill/17.jpg"></a></div>
 
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/26.png"><img src="creations/467_quill/26.png"></a></div>
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/5.png"><img src="creations/467_quill/5.png"></a></div>
-    <div class="grid-item width2"><a class="fancybox" rel="group" href="creations/850_quill/31.png"><img src="creations/467_quill/31.png"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/26.png"><img src="creations/467_quill/26.jpg"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/5.png"><img src="creations/467_quill/5.jpg"></a></div>
+    <div class="grid-item width2"><a class="fancybox" rel="group" href="creations/850_quill/31.png"><img src="creations/467_quill/31.jpg"></a></div>
 
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/23.png"><img src="creations/467_quill/23.png"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/23.png"><img src="creations/467_quill/33.png"></a></div>
+        <div class="grid-item width2"><a class="fancybox" rel="group" href="creations/850_quill/23.png"><img src="creations/467_quill/34.png"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/23.png"><img src="creations/467_quill/23.jpg"></a></div>
 
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/24.png"><img src="creations/467_quill/24.png"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/24.png"><img src="creations/467_quill/24.jpg"></a></div>
 
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/21.png"><img src="creations/467_quill/21.png"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/21.png"><img src="creations/467_quill/21.jpg"></a></div>
 
 
     <!--<div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/20.png"><img src="creations/467_quill/20.png"></a></div>-->
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/22.png"><img src="creations/467_quill/22.png"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/22.png"><img src="creations/467_quill/22.jpg"></a></div>
 
-    <div class="grid-item width3"><a class="fancybox" rel="group" href="creations/850_quill/29.png"><img src="creations/467_quill/29.png"></a></div>
-    <div class="grid-item width3"><a class="fancybox" rel="group" href="creations/850_quill/28.png"><img src="creations/467_quill/28.png"></a></div>
+    <div class="grid-item width3"><a class="fancybox" rel="group" href="creations/850_quill/29.png"><img src="creations/467_quill/29.jpg"></a></div>
+
+    <div class="grid-item "><a class="fancybox" rel="group" href="creations/850_quill/35.png"><img src="creations/467_quill/35.jpg"></a></div>
+
+    <div class="grid-item width2"><a class="fancybox" rel="group" href="creations/850_quill/28.png"><img src="creations/467_quill/37.jpg"></a></div>
+    <div class="grid-item width3"><a class="fancybox" rel="group" href="creations/850_quill/28.png"><img src="creations/467_quill/36.jpg"></a></div>
+
+    <div class="grid-item width3"><a class="fancybox" rel="group" href="creations/850_quill/28.png"><img src="creations/467_quill/28.jpg"></a></div>
 
 
 
