--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 
     <div class="grid-item width3"><a class="fancybox" rel="group" href="creations/850_quill/29.png"><img src="creations/467_quill/29.jpg"></a></div>
 
-    <div class="grid-item "><a class="fancybox" rel="group" href="creations/850_quill/35.png"><img src="creations/467_quill/35.jpg"></a></div>
+    <div class="grid-item "><a class="fancybox" rel="group" href="creations/850_quill/35.jpg"><img src="creations/467_quill/35.jpg"></a></div>
 
-    <div class="grid-item width2"><a class="fancybox" rel="group" href="creations/850_quill/28.png"><img src="creations/467_quill/37.jpg"></a></div>
-    <div class="grid-item width3"><a class="fancybox" rel="group" href="creations/850_quill/28.png"><img src="creations/467_quill/36.jpg"></a></div>
+    <div class="grid-item width2"><a class="fancybox" rel="group" href="creations/850_quill/37.jpg"><img src="creations/467_quill/37.jpg"></a></div>
+    <div class="grid-item width3"><a class="fancybox" rel="group" href="creations/850_quill/36.jpg"><img src="creations/467_quill/36.jpg"></a></div>
 
     <div class="grid-item width3"><a class="fancybox" rel="group" href="creations/850_quill/28.png"><img src="creations/467_quill/28.jpg"></a></div>
 
