new files added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/5.png"><img src="creations/467_quill/5.jpg"></a></div>
     <div class="grid-item width2"><a class="fancybox" rel="group" href="creations/850_quill/31.png"><img src="creations/467_quill/31.jpg"></a></div>
 
-    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/23.png"><img src="creations/467_quill/33.png"></a></div>
+    <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/33.png"><img src="creations/467_quill/33.png"></a></div>
         <div class="grid-item width2"><a class="fancybox" rel="group" href="creations/850_quill/23.png"><img src="creations/467_quill/34.png"></a></div>
     <div class="grid-item"><a class="fancybox" rel="group" href="creations/850_quill/23.png"><img src="creations/467_quill/23.jpg"></a></div>
 
@@ -79,10 +79,13 @@
 
     <div class="grid-item width3"><a class="fancybox" rel="group" href="creations/850_quill/29.png"><img src="creations/467_quill/29.jpg"></a></div>
 
+      
     <div class="grid-item "><a class="fancybox" rel="group" href="creations/850_quill/35.jpg"><img src="creations/467_quill/35.jpg"></a></div>
+      <div class="grid-item "><a class="fancybox" rel="group" href="creations/850_quill/39.jpg"><img src="creations/467_quill/39.jpg"></a></div>
+    <div class="grid-item "><a class="fancybox" rel="group" href="creations/850_quill/38.jpg"><img src="creations/467_quill/38.jpg"></a></div>
 
-    <div class="grid-item width2"><a class="fancybox" rel="group" href="creations/850_quill/37.jpg"><img src="creations/467_quill/37.jpg"></a></div>
-    <div class="grid-item width3"><a class="fancybox" rel="group" href="creations/850_quill/36.jpg"><img src="creations/467_quill/36.jpg"></a></div>
+    <div class="grid-item "><a class="fancybox" rel="group" href="creations/850_quill/37.jpg"><img src="creations/467_quill/37.jpg"></a></div>
+    <div class="grid-item "><a class="fancybox" rel="group" href="creations/850_quill/36.jpg"><img src="creations/467_quill/36.jpg"></a></div>
 
     <div class="grid-item width3"><a class="fancybox" rel="group" href="creations/850_quill/28.png"><img src="creations/467_quill/28.jpg"></a></div>
 
