--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
     <div class="grid-item "><a class="fancybox" rel="group" href="creations/850_quill/36.jpg"><img src="creations/467_quill/36.jpg"></a></div>
     <div class="grid-item "><a class="fancybox" rel="group" href="creations/850_quill/35.jpg"><img src="creations/467_quill/35.jpg"></a></div>
     <div class="grid-item width3"><a class="fancybox" rel="group" href="creations/850_quill/28.png"><img src="creations/467_quill/28.jpg"></a></div>
+    <div class="grid-item "><a class="fancybox" rel="group" href="creations/850_quill/35.jpg"><img src="creations/467_quill/41.jpg"></a></div>
+    <div class="grid-item width2"><a class="fancybox" rel="group" href="creations/850_quill/35.jpg"><img src="creations/467_quill/42.jpg"></a></div>
 
 
 
