one image folder deleted

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 </div>
 
 <div class="grid  effect-8" id="#grid">
-    <div class="grid-sizer"><a class="fancybox" rel="group" href="creations/467_quill/1.png"><img  src="creations/467_quill/1.png"></a></div>
+<!--    <div class="grid-sizer"><a class="fancybox" rel="group" href="creations/467_quill/1.png"><img  src="creations/467_quill/1.png"></a></div>-->
+        <div class="grid-sizer"><a class="fancybox" rel="group" href=""><img  src=""></a></div>
       <div class="grid-item"><a class="fancybox" rel="group" href="creations/467_quill/3.png"><img src="creations/467_quill/3.png"></a></div>
     <div class="grid-item width2"><a class="fancybox" rel="group" href="creations/467_quill/1.png"><img class="" src="creations/467_quill/1.png"></a></div>
   
