--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="SHORTCUT ICON" href="creations/favicon.ico?v=2" />
-    <title></title>
+    <title>Charu Artwork</title>
     <link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,7 +28,8 @@
 <div class="q-nav">
     <header>
         <h1>Quilled Creations</h1>
-        <h4>by <a href="http://www.charuv.com" target="_blank">Charu Verma </a></h4>
+        <h4 style="margin-top: 5px;">by <a href="http://www.charuv.com" target="_blank">Charu V. Manne </a></h4>
+<h4 class="email"><a> art@charuv.com </a></h4>
         
     </header>
 </div>
